Adde Profile section

--- a/style.css
+++ b/style.css
@@ -120,30 +120,75 @@ a:hover {
 
 .menu-links.open {
     max-height: 300px;
-  }
-  
-  .hamburger-icon.open span:first-child {
+}
+
+.hamburger-icon.open span:first-child {
     transform: rotate(45deg) translate(10px, 5px);
-  }
-  
-  .hamburger-icon.open span:nth-child(2) {
+}
+
+.hamburger-icon.open span:nth-child(2) {
     opacity: 0;
-  }
-  
-  .hamburger-icon.open span:last-child {
+}
+
+.hamburger-icon.open span:last-child {
     transform: rotate(-45deg) translate(10px, -5px);
-  }
-  
-  .hamburger-icon span:first-child {
+}
+
+.hamburger-icon span:first-child {
     transform: none;
-  }
-  
-  .hamburger-icon span:first-child {
+}
+
+.hamburger-icon span:first-child {
     opacity: 1;
-  }
-  
-  .hamburger-icon span:first-child {
+}
+
+.hamburger-icon span:first-child {
     transform: none;
-  }
-  
-  
+}
+
+/* SECTIONS */
+
+section {
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container {
+    display: flex;
+}
+
+/* PROFILE SECTION */
+
+#profile {
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
+
+.section___pic-container{
+    display: flex;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+.section__text {
+    align-self: center;
+    text-align: center;
+}
+
+.section__text p{
+    font-weight: 600;
+}
+
+.section__text__p1{
+    text-align: center;
+}
+
+.section__text__p1{
+    font-size: ;
+}
