--- a/css/style.css
+++ b/css/style.css
@@ -416,3 +416,13 @@ article .icon {
     cursor: default;
 }
 
+/* FOOTER SECTION */
+
+footer{
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p{
+    text-align: center;
+}
